--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ title: cat brain | grep interesting >> blog
 author: "Josh Campbell"
 email: josh@userdel.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My name's Josh and I'm a SysAdmin. I post stuff that I think will be helpful to others. My opinions are my own and do not reflect the views of my current or former employers.
+  My name's Josh and I'm a big ol' nerd. I post stuff that I think will be helpful to others. My opinions are my own and do not reflect the views of my current or former employers.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://userdel.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: irlrobot
+#twitter_username: irlrobot
 github_username:  irlrobot
 
 # Build settings
